--- a/card.html
+++ b/card.html
@@ -10,16 +10,16 @@
 
 <body>
     <div class="mother">
-        <img src="./groot.jpg" alt="">
+        <img src="cake.jpg" alt="">
 
         <!--content-->
         <div class="details">
-            <h3>Groot Loving</h3>
+            <h3>Musiimenta Benah</h3>
             <p>no:297577</p>
         </div>
         <hr/>
         <div class="dept">
-            <p>Markerting and advertizing</p>
+            <p>Code Queen Cohort 7</p>
         </div>
 
     </div>
